# IA_App_Projet

./: main.ipynb  pyproject.toml
