[project]
name = "ia-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.9.0",
    "fsspec>=2026.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]
